--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.17.2",
     "colors": "^1.3.2",
     "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.7",
     "tracer": "^0.9.2"
